// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.<level> log methods accept an event name and optional context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
      },
    },
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "bye",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.<level> log methods one for each log level 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 60,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 50,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 40,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 20,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 10,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.addToContext can be called multiple times, merging deeply 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
        "name": "Jill",
      },
    },
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.addToContext gets deeply merged with local context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
        "name": "Jill",
      },
    },
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.addToContext local context takes prescedence over pinned context 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 2,
      },
    },
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.addToContext pins context for all subsequent logs from the logger 1`] = `
Array [
  Object {
    "context": Object {
      "user": Object {
        "id": 1,
      },
    },
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.child creates a sub logger 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
      "tim",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.child inherits level from parent 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "hi",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 10,
    "path": Array [
      "root",
      "tim",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.child is unable to change context of siblings 1`] = `
Array [
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b1",
    },
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
      "b1",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b2",
    },
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
      "b2",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  Object {
    "context": Object {
      "foo": "bar",
      "from": "b3",
    },
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
      "b3",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`.child reacts to level changes in root logger 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 10,
    "path": Array [
      "root",
      "b",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`output defaults to stdout for all levels 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 60,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
]
`;

exports[`pretty controls if logs are rendered pretty or as JSON 1`] = `
Array [
  Object {
    "context": Object {},
    "event": "foo",
    "hostname": "Jasons-Prisma-Machine.local",
    "level": 30,
    "path": Array [
      "root",
    ],
    "pid": 0,
    "time": 0,
    "v": 1,
  },
  "[32m● info  root[39m[90m:[39mbar 
",
]
`;
